--- a/MiniSeconds/app/src/main/res/layout/activity_avoid_star_main.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_avoid_star_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,8 +7,8 @@
     android:layout_height="match_parent"
     tools:context="seveno.android.miniseconds.AvoidStarGame.AvoidStarMain"
     android:background="@drawable/main_bg_1"
+    android:orientation="vertical"
     >
-    
     
     <LinearLayout
         android:id="@+id/layout_aGamebg1"
@@ -17,58 +17,22 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-        
-        <ImageView
-            android:id="@+id/img_star_1"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            
-            android:layout_weight="1"
-            app:srcCompat="@android:drawable/btn_star"/>
-        
-        <ImageView
-            android:id="@+id/img_star_2"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            
-            android:layout_weight="1"
-            app:srcCompat="@android:drawable/btn_star"/>
-        
-        <ImageView
-            android:id="@+id/img_star_3"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            
-            android:layout_weight="1"
-            app:srcCompat="@android:drawable/btn_star"/>
-        
-        <ImageView
-            android:id="@+id/img_star_4"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            
-            android:layout_weight="1"
-            app:srcCompat="@android:drawable/btn_star"/>
-        
-        <ImageView
-            android:id="@+id/img_star_5"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            
-            android:layout_weight="1"
-            app:srcCompat="@android:drawable/btn_star"/>
-        
-        <ImageView
-            android:id="@+id/img_star_6"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            
-            android:layout_weight="1"
-            app:srcCompat="@android:drawable/btn_star"/>
-
+    
+    
+        <TextView
+            android:id="@+id/tv1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"/>
+    
+        <TextView
+            android:id="@+id/tv2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"/>
 
     </LinearLayout>
     
@@ -96,14 +60,13 @@
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_aGamebg1">
-        
-        <ImageView
-            android:id="@+id/img_knight1"
+    
+        <seveno.android.miniseconds.AvoidStarGame.KnightView
+            android:id="@+id/class_knightView"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/knight"/>
+            android:background="@android:color/transparent"
+            />
     </LinearLayout>
     
     
@@ -130,4 +93,51 @@
     
     
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
+    <!-- <ImageView
+              android:id="@+id/img_star_1"
+              android:layout_width="60dp"
+              android:layout_height="60dp"
+              
+              android:layout_weight="1"
+              app:srcCompat="@android:drawable/btn_star"/>
+          
+          <ImageView
+              android:id="@+id/img_star_2"
+              android:layout_width="60dp"
+              android:layout_height="60dp"
+              
+              android:layout_weight="1"
+              app:srcCompat="@android:drawable/btn_star"/>
+          
+          <ImageView
+              android:id="@+id/img_star_3"
+              android:layout_width="60dp"
+              android:layout_height="60dp"
+              
+              android:layout_weight="1"
+              app:srcCompat="@android:drawable/btn_star"/>
+          
+          <ImageView
+              android:id="@+id/img_star_4"
+              android:layout_width="60dp"
+              android:layout_height="60dp"
+              
+              android:layout_weight="1"
+              app:srcCompat="@android:drawable/btn_star"/>
+          
+          <ImageView
+              android:id="@+id/img_star_5"
+              android:layout_width="60dp"
+              android:layout_height="60dp"
+              
+              android:layout_weight="1"
+              app:srcCompat="@android:drawable/btn_star"/>
+          
+          <ImageView
+              android:id="@+id/img_star_6"
+              android:layout_width="60dp"
+              android:layout_height="60dp"
+              
+              android:layout_weight="1"
+              app:srcCompat="@android:drawable/btn_star"/>-->
