--- a/MiniSeconds/app/src/main/res/layout/activity_avoid_star_main.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_avoid_star_main.xml
@@ -10,29 +10,128 @@
     android:orientation="vertical"
     >
     
+    
+    <!--  <seveno.android.miniseconds.AvoidStarGame.PipeView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"/>-->
+    
+   <!-- <ProgressBar
+        android:id="@+id/progressBar"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:max="100"
+        android:progress="80"
+        android:progressDrawable="@drawable/progress_drawable"
+        android:visibility="gone"/>
+    
+    <LinearLayout
+        android:id="@+id/line_s_title"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="vertical"
+        android:visibility="gone">
+    
+        <TextView
+            android:id="@+id/tv_s_act"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="TextView"
+            android:textColor="@color/BlueViolet"
+            />
+    </LinearLayout>-->
+    
     <LinearLayout
         android:id="@+id/layout_aGamebg1"
         android:layout_width="368dp"
-        android:layout_height="368dp"
+        android:layout_height="470dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
     
+     <!--   <ImageView
+            android:id="@+id/img_b_pipe"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_weight="1"
+            android:visibility="gone"
+            app:srcCompat="@drawable/pipe_b_attack"/>-->
     
-        <TextView
-            android:id="@+id/tv1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"/>
+        <ImageView
+            android:id="@+id/img_star_1"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center_horizontal"
+            android:visibility="gone"
+            app:srcCompat="@android:drawable/btn_star"/>
     
-        <TextView
-            android:id="@+id/tv2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"/>
+        <ImageView
+            android:id="@+id/img_star_2"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:visibility="gone"
+            app:srcCompat="@android:drawable/btn_star"/>
+    
+        <ImageView
+            android:id="@+id/img_star_3"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:visibility="gone"
+            app:srcCompat="@android:drawable/btn_star"/>
+    
+        <ImageView
+            android:id="@+id/img_star_4"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+
+            
+            android:visibility="gone"
+            app:srcCompat="@android:drawable/btn_star"/>
+    
+        <ImageView
+            android:id="@+id/img_star_5"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+
+            
+            android:visibility="gone"
+            app:srcCompat="@android:drawable/btn_star"/>
+    
+        <ImageView
+            android:id="@+id/img_star_6"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+
+            
+            android:visibility="gone"
+            app:srcCompat="@android:drawable/btn_star"/>
+        
+        
+        <LinearLayout
+            android:id="@+id/line_character"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:gravity="bottom"
+            android:orientation="vertical"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layout_aGamebg1">
+    
+            <seveno.android.miniseconds.AvoidStarGame.KnightView
+                android:id="@+id/class_knightView"
+                android:layout_width="360dp"
+                android:layout_height="80dp"
+                android:background="@android:color/transparent"
+                />
+        </LinearLayout>
 
     </LinearLayout>
     
@@ -46,29 +145,6 @@
         tools:layout_editor_absoluteX="8dp">
 
     </LinearLayout>-->
-    
-    
-    <LinearLayout
-        android:id="@+id/line_character"
-        android:layout_width="368dp"
-        android:layout_height="80dp"
-        android:layout_gravity="bottom"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="-3dp"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_aGamebg1">
-    
-        <seveno.android.miniseconds.AvoidStarGame.KnightView
-            android:id="@+id/class_knightView"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:background="@android:color/transparent"
-            />
-    </LinearLayout>
-    
     
     
     <LinearLayout
