--- a/MiniSeconds/app/src/main/res/layout/activity_avoid_star_main.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_avoid_star_main.xml
@@ -43,7 +43,7 @@
             />
     </LinearLayout>-->
     
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/layout_aGamebg1"
         android:layout_width="368dp"
         android:layout_height="470dp"
@@ -65,51 +65,55 @@
             android:id="@+id/img_star_1"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_gravity="center_horizontal"
-            android:visibility="gone"
-            app:srcCompat="@android:drawable/btn_star"/>
+            android:layout_marginLeft="80dp"
+            android:visibility="visible"
+            app:srcCompat="@android:drawable/btn_star"
+           
+            />
     
         <ImageView
             android:id="@+id/img_star_2"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:visibility="gone"
+            android:visibility="visible"
+            android:layout_marginLeft="160dp"
             app:srcCompat="@android:drawable/btn_star"/>
     
         <ImageView
             android:id="@+id/img_star_3"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:visibility="gone"
+            android:visibility="visible"
+            android:layout_marginLeft="240dp"
             app:srcCompat="@android:drawable/btn_star"/>
     
         <ImageView
             android:id="@+id/img_star_4"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginLeft="80dp"
 
-            
-            android:visibility="gone"
+            android:visibility="visible"
             app:srcCompat="@android:drawable/btn_star"/>
     
         <ImageView
             android:id="@+id/img_star_5"
             android:layout_width="80dp"
             android:layout_height="80dp"
-
-            
-            android:visibility="gone"
+            android:layout_marginTop="80dp"
+            android:layout_marginLeft="160dp"
+            android:visibility="visible"
             app:srcCompat="@android:drawable/btn_star"/>
     
         <ImageView
             android:id="@+id/img_star_6"
             android:layout_width="80dp"
             android:layout_height="80dp"
-
-            
-            android:visibility="gone"
+            android:layout_marginLeft="240dp"
+            android:layout_marginTop="80dp"
+            android:visibility="visible"
             app:srcCompat="@android:drawable/btn_star"/>
-        
         
         <LinearLayout
             android:id="@+id/line_character"
@@ -133,7 +137,7 @@
                 />
         </LinearLayout>
 
-    </LinearLayout>
+    </FrameLayout>
     
     
    <!-- <LinearLayout
