--- a/MiniSeconds/app/src/main/res/layout/activity_bubble_game.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_bubble_game.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="seveno.android.miniseconds.BubbleShooter.BubbleGame">
-   <!-- <LinearLayout
+    <LinearLayout
         android:id="@+id/linear_text"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
@@ -18,14 +18,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         >
-    
+        
         <TextView
             android:id="@+id/txt_Bubble_score"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Score : "/>
     </LinearLayout>
-    
     
     
     <LinearLayout
@@ -49,9 +48,29 @@
             android:max="100"/>
     </LinearLayout>
     
-    <seveno.android.miniseconds.bubbleshooter.BubbleGameView
+   <seveno.android.miniseconds.BubbleShooter.BubbleGameView
         android:id="@+id/mBubbleGameView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>-->
+        android:layout_height="match_parent"/>
     
 </FrameLayout>
+    <!-- <LinearLayout
+           android:id="@+id/linear_text"
+           android:layout_width="368dp"
+           android:layout_height="wrap_content"
+           android:layout_marginBottom="8dp"
+           android:layout_marginLeft="8dp"
+           android:layout_marginStart="8dp"
+           android:orientation="vertical"
+           android:layout_gravity="top"
+           app:layout_constraintBottom_toBottomOf="parent"
+           app:layout_constraintLeft_toLeftOf="parent"
+           >
+       
+           <TextView
+               android:id="@+id/txt_Bubble_score"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:text="Score : "/>
+       </LinearLayout>
+       -->
