--- a/PicturePuzzle/app/src/main/res/layout/activity_finish_puzzle_screen.xml
+++ b/PicturePuzzle/app/src/main/res/layout/activity_finish_puzzle_screen.xml
@@ -1,10 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="seveno.andorid.miniseconds.picturepuzzle.FinishPuzzleScreen">
+    
+    
+    <TextView
+        android:id="@+id/txt_b_finished"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/textview_finished"
+        android:textSize="@dimen/text_size_title"
+        android:textStyle="bold"
+        android:typeface="serif"/>
+    
+    <TextView
+        android:id="@+id/txt_b_time"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textSize="@dimen/text_size"
+        android:typeface="serif"/>
+    
+    <TextView
+        android:id="@+id/txt_b_finaltime"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textSize="@dimen/text_size"
+        android:typeface="serif"/>
+    
+    <!--<TextView
+        android:id="@+id/textview_errors"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textSize="@dimen/text_size"
+        android:typeface="serif"/>-->
+    
+    <TextView
+        android:id="@+id/fin_bubble_score"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textSize="@dimen/text_size"
+        android:typeface="serif"/>
+    
+    <Button
+        android:id="@+id/btn_bubble_next"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:onClick="btn_bubble_next"
+        android:text="@string/button_NextGame"
+        android:textSize="@dimen/text_size"
+        android:typeface="serif"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
