--- a/PicturePuzzle/app/src/main/res/layout/activity_picture_puzzle_game.xml
+++ b/PicturePuzzle/app/src/main/res/layout/activity_picture_puzzle_game.xml
@@ -7,8 +7,6 @@
     android:layout_height="match_parent"
     tools:context="seveno.andorid.miniseconds.picturepuzzle.PicturePuzzleGame">
     
-   
-    
     
     <seveno.andorid.miniseconds.picturepuzzle.PuzzleView
         android:id="@+id/puzzleView"
@@ -16,9 +14,22 @@
         android:layout_height="400dp"
         android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"/>
+        app:layout_constraintTop_toTopOf="parent"/>
+    
+    <TextView
+        android:id="@+id/countdown_view_p"
+        android:layout_width="300dp"
+        android:layout_height="320dp"
+        android:layout_gravity="center_vertical"
+        android:gravity="center_horizontal"
+        android:text="3"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textSize="300dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
     
     <LinearLayout
         android:id="@+id/linear_pbar"
