--- a/PicturePuzzle/app/src/main/res/layout/activity_puzzle_preview.xml
+++ b/PicturePuzzle/app/src/main/res/layout/activity_puzzle_preview.xml
@@ -12,25 +12,12 @@
         android:id="@+id/sparty_first"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/sparty"
+        app:srcCompat="@drawable/p_sparty"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"/>
     
-    <TextView
-        android:id="@+id/countdown_view_p"
-        android:layout_width="300dp"
-        android:layout_height="320dp"
-        android:layout_gravity="center_vertical"
-        android:gravity="center_horizontal"
-        android:text="3"
-        android:textAlignment="center"
-        android:textColor="#ffffff"
-        android:textSize="300dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+   
 
 </android.support.constraint.ConstraintLayout>
